[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/JonTalk.gd" type="Script" id=1]

[node name="J\'onese" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.356863, 0.298039, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Otto Conversion" type="HSplitContainer" parent="CanvasLayer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
split_offset = 442

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/TabContainer/Otto Conversion"]
margin_right = 487.0
margin_bottom = 532.0
dragger_visibility = 1

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Otto Conversion/VSplitContainer"]
margin_right = 487.0
margin_bottom = 14.0
text = "English"
align = 1

[node name="English" type="TextEdit" parent="CanvasLayer/TabContainer/Otto Conversion/VSplitContainer"]
margin_top = 26.0
margin_right = 487.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 500 )
text = "type something here!! :)"
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer2" type="VSplitContainer" parent="CanvasLayer/TabContainer/Otto Conversion"]
margin_left = 499.0
margin_right = 984.0
margin_bottom = 532.0
dragger_visibility = 1

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Otto Conversion/VSplitContainer2"]
margin_right = 485.0
margin_bottom = 14.0
text = "J'onese"
align = 1

[node name="Jonese" type="TextEdit" parent="CanvasLayer/TabContainer/Otto Conversion/VSplitContainer2"]
margin_top = 26.0
margin_right = 485.0
margin_bottom = 532.0
text = "tangoyankeepapaecho sierraoscarmikeechotangohotelindianovembergolf hotelechoromeoecho!! :)"
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dictionary" type="HBoxContainer" parent="CanvasLayer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TabContainer/Dictionary"]
margin_right = 486.0
margin_bottom = 532.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Dictionary/VBoxContainer"]
margin_top = 157.0
margin_right = 486.0
margin_bottom = 375.0
text = "Alfa
Bravo
Charlie
Delta
Echo
Foxtrot
Golf
Hotel
India
Jerma
Kilo
Lima
Mike"
align = 1

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/TabContainer/Dictionary"]
margin_left = 490.0
margin_right = 494.0
margin_bottom = 532.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/TabContainer/Dictionary"]
margin_left = 498.0
margin_right = 984.0
margin_bottom = 532.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Dictionary/VBoxContainer2"]
margin_top = 157.0
margin_right = 486.0
margin_bottom = 375.0
text = "November
Oscar
Papa
Quebec
Romeo
Sierra
Tango
Uniform
Victor
Whiskey
Xray
Yankee
Zulu"
align = 1
[connection signal="text_changed" from="CanvasLayer/TabContainer/Otto Conversion/VSplitContainer/English" to="." method="_on_English_text_changed"]
[connection signal="text_changed" from="CanvasLayer/TabContainer/Otto Conversion/VSplitContainer2/Jonese" to="." method="_on_Jonese_text_changed"]
